gccida/c1/decode_field_reference
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3675:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3688:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3695:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3696:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3697:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3698:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3700:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3737:20: error: expected expression
v18 = ( tree_node *)high; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/fold-const.c:3737:9: error: use of undeclared identifier 'tree_node'
v18 = ( tree_node *)high; 
        ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decode_field_reference/src/obj/fold-const.o] Error 1
